fix(nav-main-link-current): Fix contrast of current link

--- a/qa-theme/Etalab/scss/settings/_settings.color.scss
+++ b/qa-theme/Etalab/scss/settings/_settings.color.scss
@@ -50,5 +50,5 @@ $theme-colors: (
   attribution-footer-link-txt: $blue-bayoux,
   topbar-service-link-txt: $cod-gray,
   nav-main-link-txt: $endeavou,
-  nav-main-link-current-txt: $jade,
+  nav-main-link-current-txt: $punch,
 );
